# pickett_gui

./: .clangd  .gitignore  AGENTS.md  CMakeCache.txt  CMakeLists.txt  Makefile  PLANS.md  TODO.md  cmake_install.cmake  cyanomethcycloprop_gs.bak  cyanomethcycloprop_gs.cat  cyanomethcycloprop_gs.fit  cyanomethcycloprop_gs.int  cyanomethcycloprop_gs.lin  cyanomethcycloprop_gs.out  cyanomethcycloprop_gs.par  cyanomethcycloprop_gs.res  cyanomethcycloprop_gs.var  cyanomethcycloprop_gsdummy.lin  main.cpp  mainwindow.cpp  mainwindow.h  pickett_py.py  spcat  spectrumplotwidget.cpp  spectrumplotwidget.h  spfit
.cmake/api/v1/reply/: cache-v2-905b9c40f88006e6b0d2.json  cache-v2-ece83ea9366fe5efce8a.json  cmakeFiles-v1-eb567d5b68f96d153c91.json  codemodel-v2-92743baba056537e392a.json  codemodel-v2-d59610f56e4c9abff139.json  directory-.-38e5c979cf0928fbc6fa.json  directory-.-a54b8042556a4700bebf.json  index-2024-03-13T17-27-46-0138.json  index-2024-03-13T17-29-35-0254.json  target-example-3e31337ec7a7cd63fd3d.json  target-example_autogen-ce81b8564e3fc95eebdf.json  target-pickett_gui-c29dd3cace3307253137.json  target-pickett_gui_autogen-df75af1ae530d3be8709.json
.opencode/plans/: TODO.md  snake_case_inventory.md
.qt/: QtDeploySupport.cmake
qml/: Main.qml  SpectrumPlot.qml  ViewerPage.qml  WelcomePage.qml
src/: main.cpp  mainwindow.h
src/errors/: parser_error.h  service_failure.h
src/models/: catalogdata.cpp  catalogdata.h  simd_stats.cpp  simd_stats.h  spectrumdata.cpp  spectrumdata.h  viewportmodel.cpp  viewportmodel.h
src/parsers/: cat_parser.cpp  cat_parser.h  fit_parser.cpp  fit_parser.h  int_parser.cpp  int_parser.h  lin_parser.cpp  lin_parser.h  par_parser.cpp  par_parser.h  spe_parser.cpp  spe_parser.h  utils.cpp  utils.h
src/plot/: catalogplotitem.cpp  catalogplotitem.h  spectrumplotitem.cpp  spectrumplotitem.h
src/services/: spectralfileservice.cpp  spectralfileservice.h
test_data/: ascp.for  calfit.c  cyanomethcycloprop.bak  cyanomethcycloprop.fit  cyanomethcycloprop.int  cyanomethcycloprop.lin  cyanomethcycloprop.out  cyanomethcycloprop.var  cyanomethcycloprop_bak.bak  cyanomethcycloprop_bak.inp  cyanomethcycloprop_bak.int  cyanomethcycloprop_bak.lin  cyanomethcycloprop_bak.out  cyanomethcycloprop_bak.par  cyanomethcycloprop_bak.var  cyanomethcycloprop_out.txt  diethylether.par  piform.for  slibgcc.c  spcat  spcat_log.txt  spfit  spfit_log.txt  spinv.txt  subfit.c  sview.for
tests/: bench_cat_parser.cpp  bench_simd_stats.cpp  test_cat_parser.cpp  test_fit_parser.cpp  test_int_parser.cpp  test_lin_parser.cpp  test_model_error_state.cpp  test_par_parser.cpp  test_simd_stats.cpp  test_spe_parser.cpp  test_spectral_file_service.cpp  test_viewportmodel.cpp
